kauzalno-zaključivanje: first draft

--- a/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
@@ -43,3 +43,14 @@ PMCID: PMC5888052}
 PMID: 12242150},
 	langid = {English}
 }
+
+@article{cinelli2020,
+	title = {A Crash Course in Good and Bad Controls},
+	author = {Cinelli, Carlos and Forney, Andrew and Pearl, Judea},
+	year = {2020},
+	date = {2020},
+	journal = {SSRN Electronic Journal},
+	doi = {10.2139/ssrn.3689437},
+	url = {https://www.ssrn.com/abstract=3689437},
+	langid = {en}
+}
