kauzalno-zakljucivanje: posted

--- a/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/biblio.bib
@@ -54,3 +54,19 @@ PMID: 12242150},
 	url = {https://www.ssrn.com/abstract=3689437},
 	langid = {en}
 }
+
+@article{westreich2013,
+	title = {The Table 2 Fallacy: Presenting and Interpreting Confounder and Modifier Coefficients},
+	author = {Westreich, Daniel and Greenland, Sander},
+	year = {2013},
+	month = {02},
+	date = {2013-02-15},
+	journal = {American Journal of Epidemiology},
+	pages = {292--298},
+	volume = {177},
+	number = {4},
+	doi = {10.1093/aje/kws412},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3626058/},
+	note = {PMID: 23371353
+PMCID: PMC3626058}
+}
