--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -1,9 +1,9 @@
 ---
 title: "Kauzalno zaključivanje je moguće iz opservacionih studija"
-description: "Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Kauzalno, uzročno-posledično zaključivanje je pravi naučni cilj. Džudea Perl je popularizovao način kako možemo kroz opservacije da simuliramo randomizovane eksperimente i da iz njih dobijemo uzroke."
-date: 2023-07-29
+description: "Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Kauzalno, uzročno-posledično zaključivanje, je pravi naučni cilj. Džudea Perl je popularizovao način kako možemo kroz opservacije da simuliramo randomizovane eksperimente i da iz njih dobijemo uzroke."
+date: 2023-08-07
 date-format: D/MM/YYYY
-lang: sr-Latn
+lang: sr-latn
 language: language-sr-Latn.yml
 author:
   - name: Nikola N. Grubor
@@ -13,43 +13,44 @@ author:
 citation: true
 bibliography: biblio.bib
 categories: [statistika, kauzalnost, srpski]
-image: ""
+image: "observation.jpg"
 mermaid: 
   theme: forest
-draft: true
 ---
 
-Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani). Pozati primeri su broj prodatih sladoleda i stopa kriminala tokom godine; i pušenje i malignitet pluća. Tako je svet medicine, a i nauke njoj sličnoj, bio ograničen na tvrdnje asocijacija. Ono što naučnici žele da kažu je da $A$ uzrokuje $B$ ($A\rightarrow B$), ali ne smeju, jer su takve tvrdnje prejake za statističke metode koje se koriste. Tako da je medicinska literatura prepuna reči koje izbegavaju uročne tvrdnje -- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Ispostavilo se da je sasvim moguće samo posmatranjem doći do uzroka stvari. Kako možemo bez ikakvog intervenisanja, tj. samo gledanjem prirode doći do zaključaka šta bi se desilo da zapravo uradimo nešto? Kako je takva stvar moguća?
+Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani).[^1] Svet medicine, a i nauke njoj sličnoj, bile su ograničene na tvrdnje asocijacija. Naučnici su želeli da kažu $A$ uzrokuje $B$ ($A\rightarrow B$), ali nisu smeli, jer su takve tvrdnje bile prejake za statističke metode. Medicinska literatura je prepuna reči koje izbegavaju uzročne tvrdnje --- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Ispostavlja se da je sasvim moguće samo posmatranjem doći do uzroka stvari. Kako možemo bez ikakvog intervenisanja, tj. samo gledanjem prirode doći do zaključaka šta bi se desilo da zapravo uradimo nešto? Kako je tako nešto moguće?
+
+[^1]: Poznata mantra statistike: "Korelacija ne znači kauzalnost." Kako stvari stoje, kauzalnost ne garantuje ni korelaciju.
 
 # Kletva korelacija
 
-Ono što čoveka najviše razlikuje od životinja je sposobnost da zamisli "bliske moguće svetove." Bliski mogući svetovi su odgovori na pitanje: "Šta bi bilo, kad bi bilo?" Tokom evolucije, bliski pretci modernog čoveka su steli sposobnost da komuniciraju ideje i sarađuju na sve kompleksnije načine. Šta god da je dovelo to ove pojave, dalo je čoveku sposobnost da zamisli nepostojeće --- uz koju je došla i sposobnost planiranja. @pearl2018 u svojoj knjizi opisuje tri stepenika kognitivnog ramišljanja u zavisnosti od toga na kakva pitanja mogu dati odgovor.
+Ono što čoveka najviše razlikuje od životinja je sposobnost da zamisli *bliske moguće svetove*. Bliski mogući svetovi su odgovori na pitanje: "Šta bi bilo, kad bi bilo?" Tokom evolucije, bliski pretci modernog čoveka su stekli sposobnost da komuniciraju ideje i sarađuju na sve kompleksnije načine. Šta god da je dovelo to ove prosocijalne pojave, dalo je čoveku sposobnost da zamisli nepostojeće --- uz koju je došla i sposobnost planiranja. @pearl2018 u svojoj knjizi opisuju tri stepenika kognitivnog razmišljanja u zavisnosti od toga na kakva pitanja ono može dati odgovor.
 
 -   Prvi stepenik -- Asocijacije\
     Šta ako vidim?\
-    Primer: Sta mi ovaj simptom govori o bolesti?
+    Primer: Ako pacijent ima ovaj simptom, on mi govori da...?
 
 -   Drugi stepenik -- Intervencija\
     "Šta ako uradim?"\
-    Primer: Da li ce me proci glavobolja ako uzmem aspirin?
+    Primer: Da li će me proći glavobolja ako uzmem aspirin?
 
--   Treci stepenik -- Kontračinjenice (eng. counterfactual)\
+-   Treći stepenik -- Kontračinjenice (eng. counterfactual)\
     "Šta da sam uradio? Zašto?"\
     Primer: Da li mi je aspirin zaustavio glavobolju?
 
-Ako se velika većina istraživanja bazira na asocijacijama, niko ne može pretpostaviti šta će se desiti ako uzmemo i uradimo nešto. To je ogroman problem. Skoro smo u Beogradu imali veliko nevreme. Vetar je doslovno odnosio krovove. Te dve stvari je svako mogao da primeti (prvi stepenik, asocijacija; $\rho = \text{corr}(vetar, odnošenje\,krova)$), međutim ako bi se neko popeo na svoj krov i počeo da baca crepove, ma koliko se trudio ne bi prizvao vetar (kauzalna strelica ide $vetar \rightarrow odnošenje \,krova$, a ne suprotno). Koncept kauzalne strelice ćemo dodatno istražiti u narednim poglavljima, pogotovo kada budemo pričali o kauzalnim dijagramima. Elem, jedno po jedno.
+Ako se velika većina istraživanja bazira na asocijacijama. Posledica takvog istraživanja je da niko ne može pretpostaviti šta će se desiti ako uzmemo i uradimo nešto. To je ogroman problem. Skoro smo u Beogradu imali veliko nevreme. Vetar je doslovno odnosio krovove. Te dve stvari je svako mogao da primeti (prvi stepenik, asocijacija; $\rho = \text{corr}(vetar, odnošenje\,krova)$), međutim ako bi se neko popeo na svoj krov i počeo da baca crepove, ma koliko se trudio ne bi prizvao vetar (kauzalna strelica ide $vetar \rightarrow odnošenje \,krova$, a ne suprotno). Koncept kauzalne strelice ćemo dodatno istražiti u narednim poglavljima, pogotovo kada budemo pričali o kauzalnim dijagramima. Jedno po jedno.
 
 # Šta je kauzalno zaključivanje?
 
-Kauzalno, uzročno-posledično zaključivanje je pravi naučni cilj. Ponekad je dobro imati predviđanja, ali uglavnom ono što želimo je da razumemo fenomen kako bismo mogli da intervenišemo tj. promenimo nešto. Produžimo životni vek, sprečimo bolest, smanjimo rizik, planiramo projekat, itd. U tom slučaju ne možemo vršiti zaključivanja uz pomoć prvog stepenika, već pričamo o drugom stepeniku --- intervencijama. Tad nas [korelacije mogu zavarati](https://www.tylervigen.com/spurious-correlations). Treba nam način da otkrijemo kako su stvari zapravo povezane, a da se ne zavaramo lažnim asocijacijama. Interesantno je kako je Francis Galton (1822-1911), Britanski učenjak, u svojoj potrazi za uzrocima, nabasao prvo na korelaciju ($\rho$). Tim putem moramo proći i mi.
+Kauzalno, uzročno-posledično zaključivanje, je pravi naučni cilj. Ponekad je dobro imati predviđanja, ali uglavnom ono što želimo je da razumemo fenomen kako bismo mogli da intervenišemo tj. promenimo nešto. Produžimo životni vek, sprečimo bolest, smanjimo rizik, planiramo projekat, itd. U tom slučaju ne možemo vršiti zaključivanja uz pomoć prvog stepenika, već pričamo o drugom stepeniku --- intervencijama. Tad nas [korelacije mogu zavarati](https://www.tylervigen.com/spurious-correlations). Treba nam način da otkrijemo kako su stvari zapravo povezane, a da se ne zavaravamo lažnim asocijacijama. Interesantno je kako je Francis Galton (1822-1911), Britanski učenjak, u svojoj potrazi za uzrocima, nabasao prvo na korelaciju ($\rho$). Tim putem moramo proći i mi.
 
 ## Galton otkriva regresiju
 
-Francis Galton je tražio uzročno objašnjenje naslednosti visine kod ljudi.[^1] Elem, Galton je primetio da viši očevi imaju prosečno više sinove, ali ne i više od sebe. Sinovi niskih očeva su bili, u proseku, niži ali ne i niski kao svoji očevi (@fig-regresija-1). Galton je ovaj fenomen nazvao "regresija ka mediokritetu."[^2] Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton nije to prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju. Dve varijable (visina očeva i sinova) su korelisane ako jedna "predviđa" drugu.
+Francis Galton je tražio uzročno objašnjenje naslednosti visine kod ljudi.[^2] Elem, Galton je primetio da viši očevi imaju prosečno više sinove, ali ne i više od sebe. Sinovi niskih očeva su bili, u proseku, niži ali ne i niski kao svoji očevi (@fig-regresija-1). Galton je ovaj fenomen nazvao "regresija ka mediokritetu."[^3] Regresija ka proseku (kako je danas poznata) je statistička pojava prisutna svuda oko nas --- u tom trenutku Galton je nije prepoznao, već je mislio da je nabasao na zakon nasleđivanja. Do 1889. je shvatio da je zapravo otkrio korelaciju, a da je regresija ka proseku posledica sreće ($Visina = Prava\,visina + sreća$). Zapravo postoje dve regresione linije (@fig-regresija-1 i @fig-regresija-2) koje predviđaju jednako dobro, i ako su jednačine regresionih linija različite, situacija je simetrična. Regresija ka proseku ne može biti uzrok jer ne razlikuje nikakav redosled događaja. Dve varijable (visina očeva i sinova) su korelisane ako jedna "predviđa" drugu, a koeficijent korelacije je veći što su obe varijable bliže pravoj liniji. Da je savršena korelacija ($\rho = 1$) između visine očeva i njihovih sinova, svaki dodatni centimetar visine oca bi deterministički bio prenesen na sina.
 
-[^1]: Njegova motivacija je jasnija kad sazamo da je on bio prvi rođak Čarlsa Darvina. Zapravo, Galtona je zanimala naslednost inteligencije, kao i većinu tadašnjeg Britanskog noblesa opsednutog razlikama između sebe i "prostog" naroda.
+[^2]: Njegova motivacija je jasnija kad saznamo da je on bio prvi rođak Čarlsa Darvina. Zapravo, Galtona je zanimala naslednost inteligencije, kao i većinu tadašnjeg Britanskog noblesa opsednutog razlikama između sebe i "prostog" naroda.
 
-[^2]: Kompleksi vrve.
+[^3]: Oličenje tzv. visokog društva.
 
 ```{r}
 #| echo: false
@@ -68,10 +69,10 @@ d <- data.frame(fathers, sons)
 ```{r}
 #| label: fig-regresija
 #| layout-ncol: 2
-#| fig-cap: "Regresija."
+#| fig-cap: "Galtonova regresija visina očeva i sinova. Crvena isprekidana linija prikazuje istu tačku u obe figure. Plava regresiona linija je najbolje predviđanje za datu visinu. Populacija visokih očeva ima niže sinove, dok populacija visokih sinova ima niže očeve."
 #| fig-subcap:
-#|  - "Something."
-#|  - "Something inversed."
+#|  - "Očevi predviđaju sinove"
+#|  - "Sinovi predviđaju očeve"
 #| echo: false
 #| warning: false
 
@@ -83,7 +84,6 @@ d %>%
   geom_smooth(method = "lm", se = FALSE) +
   theme_minimal_grid() +
   labs(
-    title = "Očevi predviđaju sinove",
     x = "X = Otac (cm)",
     y = "Y = Sin (cm)"
   )
@@ -96,24 +96,23 @@ d %>%
   geom_smooth(method = "lm", se = FALSE) +
   theme_minimal_grid() +
   labs(
-    title = "Sinovi predviđaju očeve",
     x = "X = Sin (cm)",
     y = "Y = Otac (cm)"
   )
 ```
 
-Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je poznat naučnicima svuda u svetu. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desedinama godina. Ako pogledamo @fig-regresija-1 i @fig-regresija-2, videćemo da su potpuno simetrične. Očevi predviđaju visinu sina, i visina sina predviđa visinu oca. U takvom odnosu nema nikakvih uzroka. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Da, mogu poslužiti za predviđanja, ali nemaju nikakvu eksplanatornu vrednost. Planiranje intervencija takođe je nepouzdano. Da provučemo kroz skupštinu zakon o zabrani prodaje sladoleda leti, ne bismo time smanjili kriminal.
+Galton je otkrio objektivnu meru povezanosti dve varijable. Kasnije će njegov učenik Karl Pirson definisati Pirsonov koeficijent ($\rho$ ili $r$) koji je dobro poznat svakom naučniku. Insistiranje na korišćenju korelacija zarad neke fiktivne "objektivnosti" je unazadilo nauku desetinama godina. Prodaja sladoleda je korelisana sa stopom kriminala, ali nikad ne bismo izmislili priču da objasnimo kako prodaja sladoleda utiče na kriminal --- jasno nam je da su slučajno povezani. Korelacije ne govore ništa o uzrocima. Mogu poslužiti za predviđanja, ali nemaju nikakvu eksplanatornu vrednost. Planiranje intervencija je nepouzdano. Provlačenjem kroz skupštinu zakona o zabrani prodaje sladoleda, ne bismo smanjili kriminal.
 
 Zašto su prodaja sladoleda i kriminal povezani; gde se kriju uzroci?
 
 ## Konfaunder, ili skrivena treća varijabla
 
-Konfaunder, od Latinskog *confundere* što zanči "umešano", je varijabla čiji efekat utiče na izloženost i ishod, stvarajući lažnu asocijaciju. Na primer, ako procenjujemo efekat leka na bolest ($Lek \rightarrow Bolest$), ali nam je kontrolna grupa starija od ispitne, $Starost$ postaje konfaunder ($Lek \leftarrow Starost \rightarrow Bolest$) --- u ovom slučaju je ispitivač sam stvorio lažnu asocijaciju. Svaki uticaj $Leka$ sad će biti lažno izmenjem uticajem $Starosti$. Srećom, ako smo prikupili podatke o starosti pacijenata, lako možemo raspetljati neželjeni efekat treće varijable od željenog.
+Konfaunder, od Latinskog *confundere*, što znači "umešano", je varijabla čiji efekat utiče na izloženost i ishod, stvarajući lažnu asocijaciju. Na primer, ako procenjujemo efekat leka na bolest ($Lek \rightarrow Bolest$), ali nam je kontrolna grupa starija od ispitne, $Starost$ postaje konfaunder ($Lek \leftarrow Starost \rightarrow Bolest$) --- ispitivač je sam stvorio lažnu asocijaciju. Svaki uticaj $Leka$ sad će biti lažno izmenjen uticajem $Starosti$. Srećom, ako smo prikupili podatke o starosti pacijenata, lako možemo raspetljati neželjene efekte treće varijable od $Leka$.
 
 ::: {.callout-note collapse="true"}
 ## Dodatak: matematičko objašnjenje kontrolisanja treće varijable
 
-Regresijom povlačimo najbolju liniju kroz oblak podataka. Za objašnjenje ($X$) i ishod ($Y$), jednačina regresione linije bi izgledala: $Y = aX + b$. U tom slučaju, jedna jedicina povećanja $X$ će, u proseku, povećati $Y$ za $a$-jedinica. Ako nema nikakvih konfaundera onda je to procena naše intervencije. Ukoliko postoji neka treća varijabla, onda $a$ daje prosečan trend, tj. korelaciju, a ne kauzalni efekat. Ako pretpostavimo da imamo konfaunder $Z$, onda varijable $X, Y, Z$ prave "oblak" u 3D prostoru, i naša regresiona linija postaje ravan $Y = aX + bZ + c$ ukoliko uvrstimo $Z$ u regresionu jednačinu. Ono sto koeficijent $a$ onda predstavlja je parcijalni regresioni koeficijent "kontrolisan" za $Z$. Tako smo uklonili neželjeni efekat $Z$ i dobili pravi efekat $X$ na $Y$ [@pearl2018].
+Regresijom povlačimo najbolju liniju kroz oblak podataka. Za objašnjenje ($X$) i ishod ($Y$), jednačina regresione linije bi izgledala: $Y = aX + b$. U tom slučaju, jedna jedinica povećanja $X$ će, u proseku, povećati $Y$ za $a$-jedinica. Ako nema nikakvih konfaundera onda je to procena naše intervencije. Ukoliko postoji neka treća varijabla, onda $a$ daje prosečan trend, tj. korelaciju, a ne kauzalni efekat. Ako pretpostavimo da imamo konfaunder $Z$, onda varijable $X, Y, Z$ prave "oblak" u 3D prostoru, i naša regresiona linija postaje ravan $Y = aX + bZ + c$ ukoliko uvrstimo $Z$ u regresionu jednačinu. Ono sto koeficijent $a$ onda predstavlja je parcijalni regresioni koeficijent "kontrolisan" za $Z$. Tako smo uklonili neželjeni efekat $Z$ i dobili pravi efekat $X$ na $Y$ [@pearl2018].
 :::
 
 <!-- ::: callout-warning -->
@@ -126,7 +125,7 @@ Regresijom povlačimo najbolju liniju kroz oblak podataka. Za objašnjenje ($X$)
 
 ::: columns
 ::: {.column width="50%"}
-Kada znamo da je moguće kontrolisati za lažne asocijacija, da li to znači da treba da kontrolišemo za što više stvari kako bi naši efekti bili tačniji? Nažalost, ubacivanje varijabli bez razmišljanja nam može uništiti procenu. Retki su statistički kursevi koji uče istraživače kako da biraju kontrolne varijable, a njihovo nasumično ubacivanje može dovesti do katastrofalnih posledica. Kontrolom nekih varijabli može se dobiti pristrasna (pogrešna) procena efekta, a ponekad i kompletno obrnutog znaka, tj. smera efekta [@cinelli2020].
+Kada znamo da je moguće kontrolisati za lažne asocijacije, da li treba da kontrolišemo za što više varijabli kako bi naši efekti bili tačniji? Nažalost, ubacivanje varijabli u regresiju bez razmišljanja nam može uništiti procenu. Retki su statistički kursevi koji uče istraživače kako da biraju kontrolne varijable, a njihovo nasumično ubacivanje može dovesti do katastrofalnih posledica. Kontrolom nekih varijabli može se dobiti pristrasna (pogrešna) procena efekta, a ponekad i kompletno obrnutog znaka, tj. smera efekta [@cinelli2020].
 :::
 
 ::: {.column width="50%"}
@@ -134,19 +133,19 @@ Kada znamo da je moguće kontrolisati za lažne asocijacija, da li to znači da 
 :::
 :::
 
-**Kauzalna salata** je procedura (ne samo regresija) kojom se uzima lista varijabli i na osnovu njih vrši nekakvo kauzalno zaključivanje. Nijedna veličina uzorka neće pretvoriti salatu u smisao. Ali postoji rešenje, **kauzalni dijagrami**.
+**Kauzalna salata** je procedura (ne samo regresija) kojom se uzima lista varijabli i na osnovu njih vrši nekakvo kauzalno zaključivanje. Nijedna veličina uzorka neće pretvoriti salatu u smisao. Ali postoji rešenje za biranje kontrolnih varijabli, **kauzalni dijagrami**.
 
 # Kauzalni dijagrami
 
-U svom radu "Da li biolozi mogu da poprave radio? --- ili, šta sam naucio tokom izučavanje apoptoze," @lazebnik2002 govori kako su biološke nauke oštećenje manjkom formalnog pristupa biološkim sistemima. Jedan od načina da se formalizuju pretpostavke u opservacionim studijama, tj. prirodnim eksperimentima su *usmereni aciklični dijagrami* (eng. Directed Acyclic Graphs, DAGs). Putem ovih dijagrama mogu se predstaviti uticaji za koje naučnik smatra da leže u osnovi nekog procesa (@fig-confounder).
+U svom radu "Da li biolozi mogu da poprave radio? --- ili, šta sam naučio tokom izučavanje apoptoze," @lazebnik2002 govori kako su biološke nauke oštećenje manjkom formalnog pristupa biološkim sistemima. Jedan od načina da se formalizuju pretpostavke u opservacionim studijama, tj. prirodnim eksperimentima su *usmereni aciklični dijagrami* (eng. Directed Acyclic Graphs, DAGs). Putem ovih dijagrama mogu se predstaviti uticaji za koje naučnik smatra da su u osnovi nekog procesa (@fig-confounder).
 
-Džudea Perl je popularizovao način kako možemo kroz opservacije da simuliramo randomizovane eksperimente, i da iz njih dobijemo uzroke. Naime, definisanjem kauzalnog dijagrama naučnik može saznati koje mu varijable trebaju za dobije odgovor na svoje pitanje. Ne samo to, jednom definisan, kauzalni dijagram eliminiše bilo kakvu zbunjenost koje kontrolne varijable treba uključiti u regresiju, a koje ne.[^3]
+Džudea Perl je popularizovao način kojim možemo opservacije (prvi stepenik) pretvoriti u randomizovane eksperimente, i da od njih dobijemo odgovore na uzročna pitanja (stepenik dva i tri). Naime, definisanjem kauzalnog dijagrama naučnik može saznati koje mu varijable trebaju da dobije odgovor na postavljeno pitanje. Jednom definisan, kauzalni dijagram eliminiše bilo kakvu zbunjenost koje kontrolne varijable treba uključiti u regresiju, a koje ne.[^4]
 
-[^3]: Ne samo regresiju, već bilo koji proces analize. Uključujuci i nelinearne metode.
+[^4]: Ne samo regresiju, već bilo koji proces analize. Uključujući i nelinearne metode.
 
 ```{r}
 #| label: fig-confounder
-#| fig-cap: "Counfounder."
+#| fig-cap: "Šematski prikaz klasičnog kauzalnog dijagrama sa konfaunderom (`Z`). Strelice pokazuju tok informacija iz jedne varijable u drugu."
 #| fig-height: 3
 #| fig-width: 5
 #| echo: false
@@ -176,17 +175,17 @@ tidy_ggdag <- dagify(
 tidy_ggdag
 ```
 
-Ovakvi kauzalni dijagrami se prave naučnim razmišljanjem. Uzroci se ne mogu dobiti iz podataka bez pretpostavki, a kauzalni dijagrami predstavljaju model procesa koji stoji iza podataka. Uz pomoć kauzalnog dijagrama naučnik može transparentno da definiše uticaje koji prožimaju fenomen koji istražuje. Kauzalni dijagram kojim se predstavi interakcija u opservacionoj studiji se onda može transformisati u randomizovani eksperiment uz pomoć do-Računa (eng. do-Calculus)! Uz ovaj koristan alat možemo analizirati uzroke iz prirodnih eksperimenata. Mnoge vrste zaključaka nam onda postaju dostupne, obuhvatajući i istraživanja naučnih pitanja za koje nije bilo moguće napraviti randomizovani eksperiment.
+Kauzalni dijagrami se prave naučnim razmišljanjem. Uzroci se ne mogu dobiti iz podataka bez pretpostavki. Kauzalni dijagrami su naučni model procesa koji stoji iza podataka i realizuje ih. Uz pomoć kauzalnog dijagrama naučnik može transparentno da definiše uticaje koji prožimaju fenomen koji istražuje. Interakcije u opservacionoj studiji se onda mogu transformisati u randomizovani eksperiment uz pomoć do-Računa (eng. do-Calculus)! Do-Račun je alat kojim možemo analizirati uzroke iz prirodnih eksperimenata. Mnoge vrste zaključaka nam onda postaju dostupne, kao i istraživanja naučnih pitanja za koje nije moguće napraviti randomizovani eksperiment.
 
 ::: callout-warning
-Ponekad regresioni koeficijenti predstavljaju kauzalne efekte, a ponekad ne. Sve zavisi od kauzalnog dijagrama!
+Ponekad regresioni koeficijenti predstavljaju kauzalne efekte, a ponekad ne. Sve zavisi od kauzalnog dijagrama! Štaviše, ne smeju se svi regresioni koeficijenti iz jedne jednačine tretirati kao kauzalni efekti [@westreich2013].
 :::
 
 ## do-Račun: Jezik Intervenisanja
 
-Recimo da smo posmatranjem prikupili podatke o uzimanju određenog leka u populaciji, i da nas zanima kako on utiče na pojavu infarkta. Takođe ćemo pretpostaviti da pol utiče na uzimanje leka. @fig-backdoor daje potencijalni kauzalni dijagram za ovaj scenario. Savršeni randomizovani eksperiment bi jednako dodelio Lek svakom polu, ali pretpostavimo da je lakše da uradimo opservacionu studiju. Do-Račun koristi matematičku operaciju koje se obeležava sa $do(x)$ da označi intervenciju ili kontračinjenicu. $do(x)$ simulira fizičku intervenciju fiksiranja izabrane varijable menjajući je sa konstantom ($X = x$), dok ostatak kauzalnog modela ostaje nepromenjen.
+Recimo da smo posmatranjem prikupili podatke o uzimanju određenog leka u populaciji. Nas zanima kako on utiče na pojavu infarkta. Takođe ćemo pretpostaviti da pol utiče na uzimanje leka, što nije nemoguća pretpostavka. @fig-backdoor daje potencijalni kauzalni dijagram za ovaj scenario. Savršeni randomizovani eksperiment bi jednako dodelio lek svakom polu, ali trenutno imamo dostupnu samo opservacionu studiju. Do-Račun koristi matematičku operaciju koje se obeležava sa $do(x)$ da označi intervenciju ili kontračinjenicu. $do(x)$ simulira fizičku intervenciju fiksiranja izabrane varijable menjajući je sa konstantom ($X = x$), dok ostatak kauzalnog modela ostaje nepromenjen.
 
-Ono što mi želimo da procenimo je efekat leka na infarkt i to možemo da izrazimo sa $P(Infarkt\,|\,do(Lek))$. Prevedno, ovaj izraz znači: "Verovatnoća da se infarkt desio, ukoliko smo dali lek." Do-Račun nam omogućava da statistički izolujemo efekat $Leka$ na $Infarkt$, ukoliko nam, naravno, kauzalni dijagram oslikava moguću realnost. Time smo dobili transformisali kauzalni dijagram u @fig-backdoor-adj, gde se jasno vidi obrisan uticaj $Pola$ na $Lek$.
+Ono što mi želimo da procenimo je efekat leka na infarkt ($Lek \rightarrow Infarkt$) i to možemo da izrazimo sa $P(Infarkt\,|\,do(Lek))$. Prevedeno, ovaj izraz znači: "Verovatnoća da se infarkt desio, ukoliko smo mi odredili lek." Do-Račun nam omogućava da statistički izolujemo efekat $Leka$ na $Infarkt$ ukoliko nam kauzalni dijagram oslikava moguću realnost. Time smo dobili transformisali kauzalni dijagram na @fig-backdoor-adj, gde se jasno vidi obrisan uticaj $Pola$ na $Lek$.
 
 Kriterijumi po kojim se mogu odrediti dobre kontrolne varijable, za bilo koji kauzalni dijagram su **Backdoor** i **Front-door** kriterijum.
 
@@ -196,11 +195,12 @@ Kriterijumi po kojim se mogu odrediti dobre kontrolne varijable, za bilo koji ka
 ::: {.column width="45%"}
 ```{mermaid}
 %%| label: fig-backdoor
-%%| fig-cap: "Something."
+%%| fig-cap: "Kauzalni dijagram uticaja `Pola` na `Lek` i `Infakrt`. `Pol` je u ovom slučaju konfaunder pošto nas zanima kauzalni efekat `Leka` na `Infarkt`"
 
 flowchart LR
   Z((Pol)) --> X & Y
   X((Lek)) ==> Y((Infarkt))
+  linkStyle 2 stroke:red
   
 ```
 :::
@@ -211,12 +211,13 @@ flowchart LR
 ::: {.column width="45%"}
 ```{mermaid}
 %%| label: fig-backdoor-adj
-%%| fig-cap: "Something."
+%%| fig-cap: "Fiksiranjem, tj. brisanjem strelice iz `Pol` u `Lek` smo uklonili uticaj konfaundera na `Lek`. Sada svaka promena u `Infarktu` uslovljena promenom `Leka` odgovara kauzalnom efektu `Leka`."
 
 flowchart LR
   Z((Pol)) --> Y
   Z((Pol)) x-.-x X
   X(("do(Lek)")) ==> Y((Infarkt))
+  linkStyle 2 stroke:red
   
 ```
 :::
@@ -224,7 +225,7 @@ flowchart LR
 
 ### Backdoor Kriterijum
 
-Pravilo o pronalaženju skupa varijabli za stratifikaciju kako bi dobili $P(Y\,|\,do(X))$. Može se upotrebiti kada se dijagram analizira vizuelno. Ovaj kriterijum se najčešće koristi.
+Backdoor kriterijum je pravilo o pronalaženju skupa varijabli, kontrolom kojih bi dobili izolovan efekat izloženosti $X$ na ishod $Y$ --- drugačije napisano: $P(Y\,|\,do(X))$. Intuitivno, blokiranjem svih alternativnih puteva (stelica) kojim je naša varijabla ($X$) od interesa povezana za ishodom ($Y$) će izolovati direktnu vezu naše varijable i ishoda ($X \rightarrow Y$). U tom slučaju, svaka korelacija između $X$ i $Y$ istovremeno odgovara efektu $X$ na $Y$. Pored toga što je najbitniji kriterijum, izuzetno je intuitivan i može se upotrebiti kada se dijagram analizira vizuelno. Backdoor kriterijum je primenjen na @fig-backdoor-adj.
 
 <!-- **Metod:** Procena artimetičke sredine efekta u svakom stratumu. Onda weighted average svakog stratuma prema prevalenci u populaciji @fig-backdoor. -->
 
@@ -234,13 +235,15 @@ Pravilo o pronalaženju skupa varijabli za stratifikaciju kako bi dobili $P(Y\,|
 
 ### Front-door Kriterijum
 
-Recimo da radimo opservacionu studiju, ali ne možemo da prikupimo podatke o genu podložnosti ka infarktu (možda ne znamo da takav postoji). Ono što jesmo prikupili su podaci o $Leku$, $Krvnom\,Pritisku$ i $Infarktu$. Ne možemo da iskoristimo backdoor kriterijum jer nemamo podatke o $Infarkt\,Gen$-u, te ga ne možemo blokirati. Preostaje nam da upotrebimo frontdoor kriterijum.
+Front-door kriterijum je malo komplikovaniji. Recimo da radimo opservacionu studiju, ali ne možemo da prikupimo podatke o genu podložnosti ka infarktu (možda ne znamo da takav postoji). Ono što jesmo prikupili su podaci o $Leku$, $Krvnom\,Pritisku$ i $Infarktu$. Ako pogledamo @fig-frontdoor-1, videćemo da $Krvni\,Pritisak$ stoji na putu efekta $Leka$ na $Infakrt$. Takva varijabla se zove **medijator**.[^5] Ne možemo iskoristiti Backdoor kriterijum jer nemamo podatke o $Infarkt\,Gen$-u, te ga ne možemo blokirati.
+
+[^5]: Dobar primer medijativnog efekta je uticaj Vitamina C na kauzalnom putu: $Citrus \rightarrow Vitamin\,C \rightarrow Skorbut$.
 
 ::: columns
 ::: {.column width="45%"}
 ```{mermaid}
 %%| label: fig-frontdoor-1
-%%| fig-cap: "Something."
+%%| fig-cap: "Kauzalni dijagram pogodan za Front-door kriterijum. Isprekidanim krugom je obeležena varijabla o kojoj ne znamo ništa, samo spekulišemo da postoji."
 
 flowchart LR
   Z((Infarkt Gen)) --> X & Y
@@ -257,7 +260,7 @@ flowchart LR
 ::: {.column width="45%"}
 ```{mermaid}
 %%| label: fig-frontdoor-2
-%%| fig-cap: "Something."
+%%| fig-cap: "Veza između `Infarkt Gena` i `Krvnog Pritiska` ne sme da postoji kako bi Front-door kriterijum bio validan. Kada se nađemo u situaciji gde je nemoguće iskoristiti Backdoor kriterijum, treba potražiti postojanje zaštićene varijable koje je medijator efekta `Leka` na `Infarkt`."
 
 flowchart LR
   Z((Infarkt Gen)) --> X & Y
@@ -265,18 +268,20 @@ flowchart LR
   X((Lek)) ==> M((Krvni Pritisak)) 
   M ==> Y((Infarkt))
   style Z stroke-dasharray: 5 5, fill:#edffc4
+  linkStyle 3 stroke:blue
+  linkStyle 4 stroke:red
   
 ```
 :::
 :::
 
-Ono što možemo da procenimo je efekat $Leka$ na $Krvni\,pritisak$. Za to nam ne treba nikakva kontrolna varijabla (@fig-frontdoor-1 pokazuje da nema strelice iz $Infarkt\,Gena$ u $Krvni\,pritisak$). Možemo da uočimo da je razlika između $P(\text{Krvni Pritisak}\,|\,\text{Lek})$ i $P(\text{Krvni Pritisak}\,|\,\text{Bez Leka})$, prosečan efekat $Leka$ na $Krvni Pritisak$.
+Ono što možemo da procenimo je kauzalni efekat Leka na Krvni Pritisak ($Lek\,{\color{blue}\rightarrow}\,Krvni\,pritisak$). Za to nam ne treba nikakva kontrolna varijabla (@fig-frontdoor-1 pokazuje da nema strelice iz Infarkt Gena u Krvni Pritisak ($Infarkt\,Gen \nrightarrow Krvni\,pritisak$). Takođe, možemo da uočimo da je razlika između $P(\text{Krvni Pritisak}\,|\,\text{Lek})$ i $P(\text{Krvni Pritisak}\,|\,\text{Bez Leka})$, prosečan efekat Leka na Krvni Pritisak.
 
-Takođe, @fig-frontdoor-1 pokazuje da možemo da procenimo kauzalni efekat $Krvnog\,Pritiska$ na $Infarkt$. Tu možemo da upotrebimo *backdoor kriterijum* da blokiramo efekat $Leka$ na $Krvni Pritisak$. Tako ćemo dobiti $P(\text{Infarkt}\,|\,do\text{(Lek)})$ i $P(\text{Infarkt}\,|\,do\text{(Bez Leka)})$.
+@fig-frontdoor-1 pokazuje da možemo da procenimo kauzalni efekat Krvnog Pritiska na Infarkt ($Krvnog\,Pritiska \,{\color{red}\rightarrow}\,Infarkt$). Upotrebom *Backdoor kriterijuma* možemo da blokiramo efekat Leka na Krvni Pritisak.  Time smo saznali prosečan efekat prosečan efekat Krvnog Pritiska na Infarkt.
 
-Time smo saznali prosečan efekat $Leka$ na $Krvni\,Pritisak$ i prosečan efekat $Krvnog\,Pritiska$ na $Infarkt$. Kombinacijom ova dva efekta možemo posrednim putem da dobijemo efekat $Leka$ na $Infarkt$ izuzetog od genetskog uticaja $Infarkt Gena$.
+<!-- Tako ćemo dobiti $P(\text{Infarkt}\,|\,do\text{(Lek)})$ i $P(\text{Infarkt}\,|\,do\text{(Bez Leka)})$. -->
 
-Proces izražavanja $P(\text{Infarkt}\,|\,do\text{(Lek)})$ preko verovatnoća koje ne sadrže do-operaciju je zapravo Front-door kriterijum.
+Kombinacijom ova dva efekta prostim množenjem (ukoliko je veza linearna) možemo posrednim putem da dobijemo efekat Leka na Infarkt izuzetog od genetskog uticaja Infarkt Gena. Proces izražavanja $P(\text{Infarkt}\,|\,do\text{(Lek)})$ preko verovatnoća koje ne sadrže do-operaciju je zapravo Front-door kriterijum.
 
 ::: callout-note
 **Upotreba:** Front-door kriterijum treba tražiti kad god ne možemo da uklonimo uticaj konfaundera Backdoor kriterijumom. U tom slučaju nam je potrebna medijatorska varijabla *zaštićena* od uticaja konfaundera (uporediti dijagrame @fig-frontdoor-1 i @fig-frontdoor-2).
@@ -286,7 +291,7 @@ Proces izražavanja $P(\text{Infarkt}\,|\,do\text{(Lek)})$ preko verovatnoća ko
 
 ::: columns
 ::: {.column width="50%"}
-Jedna od poznatijih priča je kako je Džon Snou zaključio da epidemija dijareje u Londonu potiče od zagađenja pijaće vode ljudskim fekalijama, a ne da je urokovana mijazmom (česticama lošeg vazduha) ili siromaštvom. Ova epidemija je odnela skoro 3,000 Života --- bilo je bitno da se otrije uzrok. Kako uzročnik, *Vibrio cholerae*, još uvek nije bio otkriven Džon Snou je pred sobom imao nekoliko mogućih objašenja. Teorija mijazme, koje je bila popularna u to vreme, je tvrdila da su uzročnik truležne čestice iz vazduha. Pumpa vode, koju je Snou ugasio, se često pominje kao klučan momenat u otkrivanju uzroka. Međutim, gašenje pumpe je jedva promenilo tok epidemije.
+Poznata priča o Džon Snouovom zaključku da epidemija dijareje u Londonu potiče od zagađenja pijaće vode ljudskim fekalijama, a ne da je uzrokovana mijazmom (česticama lošeg vazduha) ili siromaštvom, je dobra ilustracija kauzalnog zaključivanja. Ova epidemija je odnela skoro 3,000 Života --- uzrok je bilo bitno otkriti. Kako uzročnik, *Vibrio cholerae*, još uvek nije bio poznat Džon Snou je pred sobom imao nekoliko mogućih objašnjenja. Teorija mijazme, koje je bila popularna, tvrdila je da su uzročnik truležne čestice iz vazduha. Pumpa vode, koju je Snou ugasio, se često pominje kao ključan momenat u borbi protiv epidemije. Međutim, gašenje pumpe je jedva promenilo njen tok.
 :::
 
 ::: {.column width="50%"}
@@ -294,25 +299,28 @@ Jedna od poznatijih priča je kako je Džon Snou zaključio da epidemija dijarej
 :::
 :::
 
-Najbitnija odluka koju je Džon Snou doneo je bila kauzalne prirode je i prikazana je na @fig-instrumental. Džon Snou je primetio da su se kompanije koje snabdevaju London vodom podelile na one koje su uzimale vodu iz Temze blizu Londonskog mosta (nizvodno od kanalizacije), i one koje nisu (uzvodno). Ove kompanije su, izdelivši grad London u svoje mreže snabdevanja, ustvari randomizovale stanovnike grada na one koji su dobijali zagađenu vodu i one koji nisu.
+Najbitnij uvid koji je Džon Snou imao je bio kauzalne prirode. Džon Snou je primetio da su se kompanije koje snabdevaju London vodom podelile na one koje su uzimale vodu iz Temze blizu Londonskog mosta (nizvodno od kanalizacije), i one koje nisu. Ove kompanije su, izdelivši grad London u svoje mreže snabdevanja, u stvari randomizovale stanovnike grada na one koji su dobijali zagađenu vodu i one koji nisu. Ti stanovnici su bili raznolikih pozadina po bogatstvu, godinama, statusu, itd. Polozaj kompanije u kazzalnom dijagramu prikazan je na @fig-instrumental.
 
 Varijabla koja prirodno randomizuje opservacije naziva se **instrumentalna varijabla**. Takva varijabla po definiciji ispunjava Backdoor kriterijum, tj. nema nikakve sopstvene uzroke. @fig-instrumental pokazuje da varijabla $Kompanija$ ispunjava sledeće:
 
--   Nema strelice od $Mijazme$ do $Kompanije$
--   Postoji strelica od $Kompanije$ do $Čistoće\,vode$
--   Nema strelice od $Kompanije$ do $Dijareje$
+-   Nema strelice od $Mijazme$ do $Kompanije$\
+    (kompanije ne prenose efekat mijazme)
+-   Postoji strelica od $Kompanije$ do $Čistoće\,vode$\
+    (kompanije su zaslužne za kvalitet vode)
+-   Nema strelice od $Kompanije$ do $Dijareje$\
+    (nadamo se da kompanije ne zagađuju namerno svoju vodu)
 
-Instrumentalna varijabla nam omogućava da uradimo isti trik kao i sa Front-door kriterijumom. Uz pomoć varijable $Kompanija$ moguće je odrediti kauzalni efekat $Čistoće vode$ na $Dijareju$ bez kontrolisanja ili prikupljanja dodatnih podataka.
+Instrumentalna varijabla nam omogućava da uradimo isti trik kao i sa Front-door kriterijumom. Uz pomoć varijable $Kompanija$ moguće je odrediti kauzalni efekat $Čistoće\,vode$ na $Dijareju$ bez kontrolisanja ili prikupljanja dodatnih podataka.
 
 ::: callout-note
 ## Namera lečenja
 
-U modernom dizajnu istraživanja, namera lečenja (eng. intention-to-treat) vriši funkciju instrumentalne varijable. Kako istraživači ne mogu da kontrolišu da li će se pacijenti zapravo pridržavati dodeljene terapije, svaki procenjeni efekat terapije nakon randomizacije će biti pristrasan. Pogtovo ako ima dosta pacijenata koji odustanu od lečenja. Tako da je zapravo bolje govoriti o "efektu" dodeljivanja terapijskoj grupi. Ovo kao što možete pretpostaviti ima problema sa generalizacijom na okruženja van studije.
+U modernom dizajnu istraživanja, namera lečenja (eng. intention-to-treat) vriši funkciju instrumentalne varijable. Kako istraživači ne mogu da kontrolišu da li će se pacijenti zapravo pridržavati dodeljene terapije, svaki procenjeni efekat terapije nakon randomizacije će biti pristrasan. Pogotovo ako ima dosta pacijenata koji odustanu od lečenja. Tako da je zapravo bolje govoriti o "efektu" dodeljivanja terapijskoj grupi. Ovo kao što možete pretpostaviti ima problema sa generalizacijom na okruženja van studije.
 :::
 
 ```{mermaid}
 %%| label: fig-instrumental
-%%| fig-cap: "Something."
+%%| fig-cap: "Kauzalni dijagram epidemije kolere u Londonu. Varijabla `Kompanija` ima status instrumentalne varijable."
 
 flowchart LR
   M(Mijazma, Siromaštvo,...) -.-> W & C
@@ -348,6 +356,8 @@ flowchart LR
 <!-- $$P(\theta|\textbf{D}) = \frac{P(\theta ) P(\textbf{D} | \theta)}{P(\textbf{D})}$$ -->
 
 # Zaključak
+
+Ovo je bio kratak konceptualni uvod u kauzalne dijagrame. Pisao sam članak uglavnom sebi kao podsetnik, ali možda posluži kao uvod nekom ko je zainteresovan.
 
 ### Reference
 
