--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Kauzalno zaključivanje je moguće iz opservacionih studija"
-description: "Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Kauzalno, uzročno-posledično zaključivanje, je pravi naučni cilj. Džudea Perl je popularizovao način kako možemo kroz opservacije da simuliramo randomizovane eksperimente i da iz njih dobijemo uzroke."
+description: "Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Kauzalno, uzročno-posledično zaključivanje, je pravi naučni cilj. Džudea Perl je popularizovao način kojim možemo opservacije pretvoriti u randomizovane eksperimente, kako bi od njih dobili odgovore na uzročna pitanja."
 date: 2023-08-07
 date-format: D/MM/YYYY
 lang: sr-latn
@@ -139,7 +139,7 @@ Kada znamo da je moguće kontrolisati za lažne asocijacije, da li treba da kont
 
 U svom radu "Da li biolozi mogu da poprave radio? --- ili, šta sam naučio tokom izučavanje apoptoze," @lazebnik2002 govori kako su biološke nauke oštećenje manjkom formalnog pristupa biološkim sistemima. Jedan od načina da se formalizuju pretpostavke u opservacionim studijama, tj. prirodnim eksperimentima su *usmereni aciklični dijagrami* (eng. Directed Acyclic Graphs, DAGs). Putem ovih dijagrama mogu se predstaviti uticaji za koje naučnik smatra da su u osnovi nekog procesa (@fig-confounder).
 
-Džudea Perl je popularizovao način kojim možemo opservacije (prvi stepenik) pretvoriti u randomizovane eksperimente, i da od njih dobijemo odgovore na uzročna pitanja (stepenik dva i tri). Naime, definisanjem kauzalnog dijagrama naučnik može saznati koje mu varijable trebaju da dobije odgovor na postavljeno pitanje. Jednom definisan, kauzalni dijagram eliminiše bilo kakvu zbunjenost koje kontrolne varijable treba uključiti u regresiju, a koje ne.[^4]
+Džudea Perl je popularizovao način kojim možemo opservacije (prvi stepenik) pretvoriti u randomizovane eksperimente, kako bi od njih dobili odgovore na uzročna pitanja (stepenik dva i tri). Naime, definisanjem kauzalnog dijagrama naučnik može saznati koje mu varijable trebaju da dobije odgovor na postavljeno pitanje. Jednom definisan, kauzalni dijagram eliminiše bilo kakvu zbunjenost koje kontrolne varijable treba uključiti u regresiju, a koje ne.[^4]
 
 [^4]: Ne samo regresiju, već bilo koji proces analize. Uključujući i nelinearne metode.
 
